--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,21 @@
     "import/resolver": {
       "node": { "extensions": [".js", ".mjs"] }
     }
+  },
+  "rules": {
+    // import
+    "import/order": "error",
+    "import/first": "error",
+    "import/no-mutable-exports": "error",
+    "import/no-unresolved": "off",
+    "import/no-absolute-path": "off",
+    "import/newline-after-import": [
+      "error",
+      { "count": 1, "considerComments": true }
+    ],
+    "import/no-self-import": "error",
+    "import/no-named-as-default-member": "off",
+    "import/no-named-as-default": "off",
+    "import/namespace": "off"
   }
 }
